# eigenfaces

./: README.md  eigenfaces_lib.py  eigenfaces_script.py  pyproject.toml
eigenfaces/: eigenfaces_lib.py  eigenfaces_script.py
