[tool.poetry]
name = "eigenfaces"
version = "0.1.0"
description = ""
authors = ["Irene Alda"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
ruff = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "D",  # pydocstyle
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"inti/cli/**.py" = ["B008"]

[tool.ruff.isort]

[tool.ruff.pydocstyle]
convention = "google"